# walking_rust

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  env
docker/: node.Dockerfile  python.Dockerfile  rust.Dockerfile
front/: package-lock.json  package.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/channels/[id]/: page.tsx
front/src/components/: Loader.tsx  User.tsx
front/src/containers/: ApiEnv.tsx  Auth.tsx  Channels.tsx  Home.tsx
front/src/hooks/: useAuth.ts
front/src/storage/: auth.ts  env.ts
front/src/utils/: api.ts
node/: env.tmpl  package.json  start.sh
node/app/: package-lock.json  package.json  tsconfig.json
node/app/src/: index.ts
node/app/src/handlers/: channel.ts  index.ts  sieveOfErastosthenes.ts  users.ts  ws.ts
node/app/src/models/: channel.ts  message.ts  user.ts
node/app/src/utils/: auth.ts  context.ts  redis.ts  sequelize.ts
python/: .ash_history  env.tmpl  start.sh
python/app/: requirements.txt
rust/: .ash_history  env.tmpl  start.sh
rust/app/: Cargo.toml
rust/app/api/: Cargo.toml
rust/app/api/src/: lib.rs
rust/app/api/src/handlers/: channel.rs  mod.rs  sieve_of_eratosthenes.rs  user.rs  ws.rs
rust/app/api/src/models/: channel.rs  message.rs  mod.rs
rust/app/api/src/utils/: app_state.rs  auth.rs  env.rs  mod.rs
rust/app/entity/: Cargo.toml  Makefile
rust/app/entity/src/: channel.rs  lib.rs  message.rs  prelude.rs  user.rs
rust/app/migration/src/: m20220101_000001_create_table.rs
rust/app/src/: main.rs
