[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
redis = { version = "0.23.1", features = ["tokio-comp"] }
tokio = { version = "1.32", features = ["full", "rt"] }
migration = { path = "../migration" }
entity = { path = "../entity" }
sea-orm = { version = "0.12", features = ["sqlx-postgres","serde_json","with-chrono", "with-json", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.105"
serde = "1.0.183"
futures-util = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"] }
actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-ws = "0.2.5"
tracing-actix-web = "0.7.6"
tracing-subscriber = { version = "0.3.17", features = [] }
tracing = "0.1.37"
